Version 1.0.5 - Current
  - fix #28 toggle causes error on saving highlights

Version 1.0.4
  - fix: "Wrong type argument: stringp, nil" on highlightintg in scratch

Version 1.0.3
  - fix #23: "Wrong type argument: stringp, nil" on org export
  - fix #22: highlights not found when marginalia does not show all

Version 1.0.2
  - Update README, user manual, and doc strings in source

Version 1.0.1
  - Update user manual

Version 1.0.0
  - chg: align with GNU convention: path -> file name

         Regarding user option `org-remark-notes-file-path`, the GNU convention
         is to call this a "file name" rather than a "path"; "path" is only used
         for lists of directories as in `load-path` (pointed out by Stefan
         Monnier; thank you).

         To align with the GNU convention, the following changes are done.
         Users should not have to change their existing customization as the old
         names are aliased to the new ones.

         User option:
         - org-remark-notes-file-path -> org-remark-notes-file-name
         - org-remark-source-path-function -> 'org-remark-source-file-name

         Function:
         - org-remark-notes-file-path-function -> org-remark-notes-file-name-function

         Private Function:
         - org-remark-notes-get-file-path -> org-remark-notes-get-file-name

         `org-remark-notes-file-path`, `org-remark-source-path-function`, and
         `org-remark-notes-file-path-function` are used by existing
         customization, thus both explicitly made obsolete and aliased to the
         new file-name equivalents.

  - fix: Relative file name of the source file in the notes file

         The relative file name of the source was not relative from the marginal notes
         file but from the source file itself -- this should be relative from the
         marginal notes.

  - chg: `org-remark-global-tracking-mode' has been simplified.

         This is not expected to break the user's workflow or configuration